# clip2context

./: LICENSE  README.md  extract_transcript.py  main.py  pyproject.toml
clip2context/: __init__.py  extract_frames.py  extract_transcript.py  main.py  utils.py
